[package]
name = "rpc-perf"
version = "4.0.0-alpha.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
description = "RPC Performance Testing"
homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"
license = "Apache-2.0"

[[bin]]
name = "rpc-perf"
path = "src/main.rs"

[[bin]]
name = "rpc-replay"
path = "src/replay.rs"

[dependencies]
boring = "~1.0.3"
bytes = "1.0.0"
chrono = "0.4.19"
clap = "2.33.3"
crc = "2.1.0"
json = "0.12.4"
mio = { version = "0.7.0", features = ["os-poll", "tcp"] }
mpmc = "0.1.6"
rand = { version = "0.8.0", features = ["small_rng"] }
rand_xoshiro = { version = "0.6.0" }
rand_distr = "0.4.0"
rtrb = "0.2.0"
rustcommon-heatmap = { git = "https://github.com/twitter/rustcommon", branch = "master" }
rustcommon-logger = { git = "https://github.com/twitter/rustcommon", branch = "master" }
rustcommon-ratelimiter = { git = "https://github.com/twitter/rustcommon", branch = "master" }
rustcommon-metrics = { git = "https://github.com/twitter/rustcommon", branch = "master", package = "rustcommon-metrics-v2" }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
slab = "0.4.2"
strum = "0.20.0"
strum_macros = "0.20.1"
sysconf = "0.3.4"
thiserror = "1.0.23"
tiny_http = "0.9.0"
toml = "0.5.8"
zookeeper = "0.6.0"
zstd = "0.9.0"
