[package]
name = "atomics"
version = "0.4.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Generic atomic types with unifying traits"
homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"
readme = "README.md"

[dependencies]
serde = { version = "1.0.101", optional = true }

[features]
default = ["serde"]
