[package]
name = "codec"
version = "0.1.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Codecs and generators"
homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"
publish = false

[dev-dependencies]
criterion = "0.2"

[dependencies]
bytes = "0.4.12"
crc = "1.8.1"
datastructures = { path = "../datastructures" }
rand = "0.6.4"
logger = { path = "../logger" }
metrics = { path = "../metrics" }
time = "0.1.42"

[[bench]]
name = "echo"
harness = false

[[bench]]
name = "memcache"
harness = false

[[bench]]
name = "ping"
harness = false

[[bench]]
name = "redis"
harness = false
