[package]
name = "datastructures"
version = "0.1.3"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Shared datastructures"
homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"
publish = false

[dependencies]
logger = { path = "../logger" }
parking_lot = "0.7.1"
time = "0.1.42"
