[package]
name = "datastructures"
version = "0.4.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"

[dependencies]
atomics = { path = "../atomics" }
logger = { path = "../logger" }
parking_lot = "0.9.0"
time = "0.1.42"

[dependencies.serde]
version = "=1.0.102"
optional = true
features = [ "derive" ]
