[package]
name = "metrics-core"
version = "0.1.0"
authors = ["Sean Lynch <slynch@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Metrics facade"
publish = false

[dependencies]
evmap = "7.1.0"
time = "0.1.42"
thread_local = "1.0.0"
once_cell = "1.2.0"
log = "0.4.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
