[package]
name = "metrics"
version = "0.4.1"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Metrics library"
homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"
publish = false

[dependencies]
chashmap = "2.2.2"
datastructures = { path = "../datastructures" }
# time = "0.1.42"
