[package]
name = "metrics"
version = "0.5.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Metrics library"
homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"
publish = false

[dependencies]
chashmap = "2.2.2"
datastructures = { path = "../datastructures" }
serde = "1.0.103"
serde_derive = "1.0.103"
