[package]
name = "ratelimiter"
version = "0.4.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Token bucket ratelimiter"
homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"
publish = false

[dependencies]
datastructures = { path = "../datastructures" }
rand = "0.7.2"
rand_distr = "0.2.2"
time = "0.1.42"
