[package]
name = "rpc-perf"
version = "3.2.0-pre"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "RPC Performance Testing"
homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"
readme = "README.md"


[dependencies]
atomics = { path = "../atomics" }
buffer = { path = "../buffer" }
byteorder = "1.3.2"
bytes = "0.4.12"
clap = "2.33.0"
codec = { path = "../codec" }
crc = "1.8.1"
datastructures = { path = "../datastructures" }
logger = { path = "../logger" }
metrics = { path = "../metrics" }
mio = "0.6.19"
rand = "0.7.2"
ratelimiter = { path = "../ratelimiter" }
rustls = { version = "0.16.0", optional = true }
serde = "1.0.101"
serde_derive = "1.0.101"
slab = "0.4.2"
time = "0.1.42"
timer = { path = "../timer" }
tiny_http = "0.6.2"
toml = "0.5.3"
waterfall = { path = "../waterfall" }
webpki = { version = "0.21.0", optional = true }

[features]
default = []
tls = ["rustls/dangerous_configuration", "webpki"]
