[package]
name = "waterfall"
version = "0.3.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Generates waterfalls from heatmaps"
homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"
publish = false

[dependencies]
atomics = { path = "../atomics" }
datastructures = { path = "../datastructures" }
dejavu = "2.37.0"
hsl = "0.1.1"
logger = { path = "../logger" }
png = "0.14.1"
rand = "0.6.4"
rusttype = "0.7.7"
time = "0.1.42"
