[package]
name = "waterfall"
version = "0.4.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Generates waterfalls from heatmaps"
homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"
publish = false

[dependencies]
atomics = { path = "../atomics" }
datastructures = { path = "../datastructures" }
dejavu = "2.37.0"
hsl = "0.1.1"
logger = { path = "../logger" }
png = "0.15.0"
rusttype = "0.8.1"
time = "0.1.42"

[dev-dependencies]
rand = "0.7.2"
rand_distr = "0.2.2"