[package]
name = "waterfall"
version = "0.5.0"
authors = ["Brian Martin <bmartin@twitter.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Generates waterfalls from heatmaps"
homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"
publish = false

[dependencies]
rustcommon-atomics = { git = "https://github.com/twitter/rustcommon", branch = "master" }
rustcommon-datastructures = { git = "https://github.com/twitter/rustcommon", branch = "master" }
dejavu = "2.37.0"
hsl = "0.1.1"
log = "0.4.8"
png = "0.15.0"
rusttype = "0.8.1"
time = "0.1.42"

[dev-dependencies]
rand = "0.7.2"
rand_distr = "0.2.2"
rustcommon-logger = { git = "https://github.com/twitter/rustcommon", branch = "master" }