[package]
name = "rpcperf_cfgtypes"
version = "0.1.0"
authors = ["Brian Martin <bmartin@twitter.com>"]

license = "Apache-2.0"

description = "rpc-perf configuration types"

homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"

readme = "README.md"

[dependencies]
pad = "0.1.4"
rand = "0.3.14"
toml = "0.1.27"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[features]
unstable = []
