[package]
name = "rpcperf_common"
version = "0.2.0"
authors = ["Brian Martin <bmartin@twitter.com>"]

[dependencies]
byteorder = "=1.0.0"
crc = "=1.2.0"
getopts = "=0.2.14"
log = "=0.3.6"
mio = "=0.6.4"
mpmc = "=0.1.2"
pad = "=0.1.4"
rand = "=0.3.15"
ratelimit = "=0.3.1"
shuteye = "=0.2.0"
tic = "=0.1.3"
toml = "=0.2.1"

[features]
asm = [ "tic/asm" ]
default = []
