[package]
name = "rpcperf_echo"
version = "0.1.2"
authors = ["Brian Martin <bmartin@twitter.com>"]

license = "Apache-2.0"

description = "rpc-perf echo support"

homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"

readme = "README.md"

[dependencies]
log = "=0.3.6"
rpcperf_cfgtypes = { path = "../cfgtypes", version = "0.1.2" }
rpcperf_common = { path = "../common", version = "0.2.0" }

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[features]
unstable = []
