[package]
name = "rpcperf_parser"
version = "1.0.0"
authors = ["Brian Martin <bmartin@twitter.com>"]

license = "Apache-2.0"

description = "rpc-perf response parsers"

homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"

readme = "README.md"

[dependencies]
log = "0.3.5"
crc = "1.2.0"
byteorder = "0.5.0"