[package]
name = "rpcperf_request"
version = "1.1.0"
authors = ["Brian Martin <bmartin@twitter.com>"]

license = "Apache-2.0"

description = "rpc-perf request builder"

homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"

readme = "README.md"

[dependencies]
byteorder = "0.5.0"
crc = "1.2.0"
mpmc = "0.1.2"
pad = "0.1.4"
rand = "0.3.14"
ratelimit = "0.2.4"
shuteye = "0.1.1"
time = "0.1.34"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[features]
unstable = []