[package]
name = "rpcperf_request"
version = "1.3.0"
authors = ["Brian Martin <bmartin@twitter.com>"]

license = "Apache-2.0"

description = "rpc-perf request builder"

homepage = "https://github.com/twitter/rpc-perf"
repository = "https://github.com/twitter/rpc-perf"

readme = "README.md"

[dependencies]
getopts = "0.2.14"
log = "0.3.5"
mpmc = "0.1.2"
ratelimit = "0.3.1"
shuteye = "0.2.0"
toml = "0.1.27"
rpcperf_cfgtypes = { path = "../cfgtypes", version = "0.1.0" }
rpcperf_echo = { path = "../echo", version = "0.1.0" }
rpcperf_memcache = { path = "../memcache", version = "0.1.0" }
rpcperf_redis = { path = "../redis", version = "0.1.0" }
rpcperf_ping = { path = "../ping", version = "0.1.0" }
rpcperf_thrift = { path = "../thrift", version = "0.1.0" }

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[features]
unstable = []
